# htom

./: .gitignore  Dockerfile  Jenkinsfile  README.md  azure-pipelines.yml  main.py  pyproject.toml  sonar-project.properties
modules/: convert.py  models.py
static/: about.js  script.js  stats.js  styles.css
templates/: about.html  converter.html  stats.html
tests/: test_endpoints.py
