[project]
name = "htom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.12",
  "html2text>=2025.4.15",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "pytest>=8.3.5",
  "python-multipart>=0.0.20",
  "starlette>=0.46.2",
  "uvicorn>=0.34.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]
